--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <title>My awesome web page</title>
     </head>
-    <h1>First header</h1
+  <h1>First header</h1>
     Hello I´m Nicolás :)
   </body>
 </html>
