Update index.html image and header
Image and header updated

Co-authored-by: github-learning-lab[bot] <37936606+github-learning-lab[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <head>
         <title>My awesome web page</title>
     </head>
-  <h1>First header</h1>
+<img src="https://avatars.githubusercontent.com/u/86751545?v=4">
+
     Hello I´m Nicolás :)
   </body>
 </html>
