--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <head>
         <title>My awesome web page</title>
     </head>
-<img src="https://avatars.githubusercontent.com/u/86751545?v=4">
-
-    Hello I´m Nicolás :)
+    <img src="https://avatars.githubusercontent.com/u/86751545?v=4">
+    <ul>
+      <li>This</li>
+      <li>is</li>
+      <li>Unordered list</li>
+    </ul>
+    <ol>
+      <li>This</li>
+      <li>is</li>
+      <li>Ordered list</li>
+    </ol>
   </body>
 </html>
