--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <title>My awesome web page</title>
     </head>
-    <img src="https://avatars.githubusercontent.com/u/86751545?v=4">
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
     <ul>
       <li>This</li>
       <li>is</li>
