--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     My personal website
   </head>
+  <link rel="stylesheet" href="style.css">
     <head>
         <title>My awesome web page</title>
     </head>
