--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="style.css">
     <head>
         <title>My awesome web page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
       <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
     <ul>
